--- a/RockWeb/Styles/style-v2/components/_input-groups.scss
+++ b/RockWeb/Styles/style-v2/components/_input-groups.scss
@@ -66,6 +66,10 @@
 .form-group-sm select.form-control {
   padding-right:  var(--spacing-xlarge);
 }
+
+.input-group-btn > .btn {
+  padding: 6px var(--spacing-medium);
+}
 // ===================== END SIZING =====================
 
 
