--- a/RockWeb/Themes/RockV2/Styles/theme.scss
+++ b/RockWeb/Themes/RockV2/Styles/theme.scss
@@ -372,7 +372,7 @@ $navbar-element-height: 40px;
       > a {
         display: flex;
         align-items: center;
-        padding: 0 18px;
+        padding: 0 0;
         color: var(--color-interface-strong);
 
         @media (max-width: ($screen-medium - 1)) {
@@ -392,7 +392,7 @@ $navbar-element-height: 40px;
           @media (min-width: $screen-small) {
             width: $navbar-element-height;
             height: $navbar-element-height;
-            margin-right: 12px;
+            margin-right: 0;
           }
 
           &[style*="no-photo"] {
@@ -401,7 +401,9 @@ $navbar-element-height: 40px;
         }
 
         span {
-          display: none;
+          display: block;
+          color: var(--color-interface-strong);
+          font-weight: var(--font-weight-semibold);
         }
 
         .fa-caret-down::before {
@@ -917,11 +919,20 @@ $hamburger-spacing: 4px;
   font-size: calc(var(--size) * 0.5);
   color: var(--color-interface-strong);
   background-color: var(--color-interface-soft);
-  border: 4px solid var(--color-interface-softer);
+  border: 3px solid var(--color-interface-softer);
   border-radius: 999px;
-
+  transition: .15s ease-in-out,box-shadow .15s ease-in-out;
+  
   &:hover {
-    color: var(--color-interface-strong);
+    color: var(--color-interface-stronger);
+  }
+  
+  &:focus {
+    box-shadow: var(--input-focus-box-shadow) !important;
+    // border-color:var(--color-primary) ;
+    i {
+      color: var(--color-primary) !important;
+    }
   }
 
   @media (min-width: $screen-small) {
