- Fixed loginStatus focused bug.

--- a/RockWeb/Styles/style-v2/rock-components/_security-controls.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_security-controls.scss
@@ -23,6 +23,16 @@
   }
 }
 
+// Override the default ul/ol background-color 
+.nav {
+  .open > a {
+    &,
+    &:hover,
+    &:focus {
+      background-color: transparent;
+    }
+  }
+}
 
 .loginstatus {
   margin: 0;
