--- a/RockWeb/Styles/rock-components/labels.less
+++ b/RockWeb/Styles/rock-components/labels.less
@@ -9,6 +9,12 @@
   }
 }
 
+.label-outline {
+  color: var(--color-interface-strong);
+  background-color: transparent;
+  border: 1px solid var(--color-interface-medium);
+}
+
 .label-campus {
   color: @label-campus-color;
   background-color: @label-campus-bg;
