--- a/RockWeb/Styles/style-v2/rock-components/_labels.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_labels.scss
@@ -15,6 +15,12 @@
   }
 }
 
+.label-outline {
+  color: var(--color-interface-strong);
+  background-color: transparent;
+  border: 1px solid var(--color-interface-medium);
+}
+
 .label-campus {
   color:            var(--color-interface-softest);
   background-color: var(--color-secondary);
