--- a/RockWeb/Styles/style-v2/core.scss
+++ b/RockWeb/Styles/style-v2/core.scss
@@ -71,6 +71,7 @@
 
 /* ======================= ROCK COMPONENTS ======================*/
 @import 'rock-components/follow';                   // Fully Format. There are Some hard coded value.
+@import 'rock-components/ace-editor';               // Fully Format. There are Some hard coded value.
 @import 'rock-components/group-list';               // Fully Format. There are Some hard coded value.
 @import 'rock-components/code-editor';              // Fully Format.
 @import 'rock-components/labels';                   // Fully Format.
