--- a/RockWeb/Styles/style-v2/rock-components/_ace-editor.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_ace-editor.scss
@@ -9,15 +9,21 @@
 
 
 // ======================== BASE STYLE ========================
-.ace-tm .ace_gutter-active-line {
-    background: var(--color-interface-soft) !important;
+.ace-tm, .ace-github {
+    .ace_gutter-active-line {
+        background: var(--color-interface-soft) !important;
+    }
 }
 
-.ace-tm .ace_marker-layer .ace_active-line {
-    background-color: var(--color-interface-softer) !important;
+.ace-tm, .ace-github {
+    .ace_marker-layer .ace_active-line {
+        background-color: var(--color-interface-softer) !important;
+    }
 }
 
-.ace-tm .ace_gutter {
-    background: var(--color-interface-softer) !important;
+.ace-tm, .ace-github {
+    .ace_gutter {
+        background: var(--color-interface-softer) !important;
+    }
 }
 // ====================== END BASE STYLE ======================
