--- a/RockWeb/Themes/RockV2Prototype/Styles/theme.css
+++ b/RockWeb/Themes/RockV2Prototype/Styles/theme.css
@@ -1,3 +1,9 @@
+/* CSS Overrides Top Start */
+@import url('/Styles/styles-v2-prototype/icons/fontawesome-icon.css');
+@import url('/Styles/styles-v2-prototype/icons/fontawesome-solid.css');
+@import url('/Styles/styles-v2-prototype/icons/tabler-icon.css');
+/* CSS Overrides Top End */
+
 @import "../../../Styles/summernote/summernote.min.css";
 @import "../../../Styles/styles-v2-prototype/core.css";
 @-ms-viewport {
@@ -1148,3 +1154,42 @@ a.rock-bookmark {
 }
 
 /*# sourceMappingURL=theme.css.map */
+
+/* CSS Overrides Bottom Start */
+:root {
+    --base-primary: #FF8C3D;
+    --logo-image: url('/Assets/Images/rock-logo-circle-white.svg');
+    --base-link: #006DCC;
+    --base-secondary: #83758f;
+    --base-critical: #ee7725;
+    --base-danger: #D70015;
+    --base-info: #007AFF;
+    --base-success: #248A3D;
+    --base-warning: #E58600;
+    --base-interface-strongest: #000000;
+    --base-interface-stronger: #0d1117;
+    --base-interface-strong: #3d444d;
+    --base-interface-medium: #8B8BA7;
+    --base-interface-soft: #D9D9E3;
+    --base-interface-softer: #f8f8fc;
+    --base-interface-softest: #FFFFFF;
+    --font-size-xsmall: 12px;
+    --font-size-small: 14px;
+    --font-size-regular: 16px;
+    --font-size-h1: 44px;
+    --font-size-h2: 36px;
+    --font-size-h3: 28px;
+    --font-size-h4: 22px;
+    --font-size-h5: 18px;
+    --font-size-h6: 16px;
+    --font-family-title: -apple-system,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
+    --font-family-body: -apple-system,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
+    --spacing-tiny: 4px;
+    --spacing-xsmall: 8px;
+    --spacing-small: 12px;
+    --spacing-medium: 16px;
+    --spacing-large: 24px;
+    --spacing-xlarge: 48px;
+    --spacing-huge: 80px;
+}
+/* CSS Overrides Bottom End */
