- Changed rock primary color in RockV2Prototype theme.

--- a/RockWeb/Styles/styles-v2-prototype/_css-variable.scss
+++ b/RockWeb/Styles/styles-v2-prototype/_css-variable.scss
@@ -18,7 +18,7 @@
   --base-info:        #007AFF;
   --base-success:     #248A3D;
 
-  --base-primary:     #FF8C3D;
+  --base-primary:     #FF791D;
   --base-warning:     #E58600;
   --base-link:        #006DCC;
   --base-secondary:   #83758F;
