--- a/RockWeb/Styles/styles-v2-prototype/core.css
+++ b/RockWeb/Styles/styles-v2-prototype/core.css
@@ -237,7 +237,7 @@ th {
   --base-danger: #D70015;
   --base-info: #007AFF;
   --base-success: #248A3D;
-  --base-primary: #FF8C3D;
+  --base-primary: #FF791D;
   --base-warning: #E58600;
   --base-link: #006DCC;
   --base-secondary: #83758F;
