--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -1325,6 +1325,12 @@ td.grid-actions {
 }
 
 // splash screen
+.splash-form-btn:has(.btn-register) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 #splash {
   #content {
     max-width: 380px;
