--- a/RockWeb/Styles/styles-v2-prototype/components/_buttons.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_buttons.scss
@@ -622,6 +622,50 @@
   }
 }
 
+.btn-register {
+  color:            var(--color-interface-strong);
+  background-color: var(--color-interface-softest);
+  border-color:     var(--color-interface-soft);
+
+  &:focus,
+  &.focus {
+    color:            var(--color-interface-stronger);
+    background-color: var(--color-interface-softer);
+    border-color:     var(--color-interface-medium)
+  }
+  &:hover {
+    color:            var(--color-interface-stronger);
+    background-color: var(--color-interface-softer);
+    border-color:     var(--color-interface-soft)
+  }
+  &:active,
+  &.active,
+  .open > .dropdown-toggle & {
+    color:              var(--color-interface-stronger);
+    background-color:   var(--color-interface-softer);
+    background-image:   none;
+    border-color:       var(--color-interface-soft);
+
+    &:hover,
+    &:focus,
+    &.focus {
+      color:            var(--color-interface-stronger);
+      background-color: var(--color-interface-softest); // TODO darken by 17% when available
+      border-color:     var(--color-interface-medium)
+    }
+  }
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    &:hover,
+    &:focus,
+    &.focus {
+      background-color: var(--color-interface-softest);
+      border-color:     var(--color-interface-soft);
+    }
+  }
+}
+
 .btn-square {
   width: 38px; // TODO Hard coded width
   padding: 6px 0; // Need to hard code to match the numberincrement button height of the other element next it (LocationList) 
@@ -911,12 +955,12 @@ input[type="button"] {
 
   margin-left: var(--spacing-xsmall);
   padding: var(--spacing-xsmall) var(--spacing-xsmall);
-  font-size: 1.3em ;
-  border: 4px solid var(--color-interface-softer);
+  font-size: 1.15em ;
+  border: 1px solid var(--color-interface-soft);
   border-radius: 99px;
 
   color: var(--color-interface-strong);
-  background-color: var(--color-interface-soft);
+  background-color: var(--color-interface-softer);
 
   transition: .15s ease-in-out,box-shadow .15s ease-in-out;
 
