--- a/RockWeb/Styles/styles-v2-prototype/rock-components/_upload-controls.scss
+++ b/RockWeb/Styles/styles-v2-prototype/rock-components/_upload-controls.scss
@@ -46,6 +46,7 @@
     .imageupload-thumbnail-image {
       width:                100%;
       height:               100%;
+      background-color: var(--color-interface-soft);
       background-position:  50%;
       background-size:      cover;
       border-radius:    var(--rounded-xsmall) var(--rounded-xsmall) 0 0;
