--- a/RockWeb/Styles/styles-v2-prototype/utilities/_card.scss
+++ b/RockWeb/Styles/styles-v2-prototype/utilities/_card.scss
@@ -6,6 +6,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow: clip;
   min-width: 0; // See https://github.com/twbs/bootstrap/pull/22740#issuecomment-305868106
   word-wrap: break-word;
   background-color: var(--color-interface-softest);
@@ -75,8 +76,8 @@
   padding: .75rem 1.25rem;
   margin-top: 0; // DH: Remove BS3 margin-top of <hN>
   margin-bottom: 0; // Removes the default margin-bottom of <hN>
-  background-color: var(--color-interface-soft);
-  border-bottom: 1px solid var(--color-interface-softer);
+  background-color: var(--color-interface-softest);
+  border-bottom: 1px solid var(--color-interface-soft);
 
   &:first-child {
     border-radius: calc(var(--rounded-small) - 1px) calc(var(--rounded-small) - 1px) 0 0;
