--- a/RockWeb/Themes/RockV2Prototype/Styles/theme.scss
+++ b/RockWeb/Themes/RockV2Prototype/Styles/theme.scss
@@ -325,6 +325,13 @@ $navbar-element-height: 40px;
 
     .smartsearch-type {
       order: 10;
+      display: flex;
+      border-top-left-radius: 999px;
+      border-bottom-left-radius: 999px;
+      align-items: center;
+      background-color: var(--color-interface-softest);
+      border-right: 1px solid var(--color-interface-soft);
+      height: 100%;
       width: auto;
     }
 
@@ -923,8 +930,8 @@ a.rock-bookmark {
   height: var(--size);
   margin: 0 0 0 8px;
   font-size: calc(var(--size) * 0.5);
-  background-color: var(--color-interface-soft);
-  border: 4px solid var(--color-interface-softer);
+  background-color: var(--color-interface-softer);
+  border: 1px solid var(--color-interface-soft);
   border-radius: 999px;
   transition: .15s ease-in-out,box-shadow .15s ease-in-out;
   
@@ -941,7 +948,7 @@ a.rock-bookmark {
 
   @media (min-width: $screen-small) {
     --size: 40px;
-    padding: 22px;
+    padding: 20px;
   }
 }
 
@@ -952,7 +959,6 @@ a.rock-bookmark {
 // }
 
 .smartsearch .dropdown .navbar-link {
-  border-right: 1px solid var(--color-interface-soft);
   color: var(--color-interface-strong);
 }
 
@@ -1237,6 +1243,12 @@ a.rock-bookmark {
 }
 
 // splash screen
+.splash-form-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 #splash {
   display: flex;
   justify-content: center;
