- Fixed Financial Batch table not receiving any styling.

--- a/RockWeb/Styles/rock-components/grid-obsidian.less
+++ b/RockWeb/Styles/rock-components/grid-obsidian.less
@@ -1,6 +1,4 @@
-﻿.grid-obsidian {
-
-  .grid-overflow {
+﻿  .grid-overflow {
     overflow-x: auto;
   }
   
@@ -334,7 +332,7 @@
     min-width: fit-content;
   }
   
-  .grid-columncommand .btn {
+  .grid-obsidian .grid-columncommand .btn {
     opacity: .4;
   }
   
@@ -441,4 +439,3 @@
       top: ~"calc(var(--sticky-element-offset) + 114px)";
     }
   }
-}
