- Update the grid cell number and currency to align right by default.

--- a/RockWeb/Styles/rock-components/grid-obsidian.less
+++ b/RockWeb/Styles/rock-components/grid-obsidian.less
@@ -427,7 +427,15 @@
   .grid-obsidian .grid-cell .highlight-title {
     font-weight: 600;
   }
-  
+
+.grid-obsidian .grid-cell-number,
+.grid-obsidian .grid-cell-currency,
+.grid-obsidian .grid-column-header-number,
+.grid-obsidian .grid-column-header-currency {
+  text-align: right;
+  justify-content: right;
+}
+
   @media (max-width: 767px) {
     .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > .page-num {
       display: none;
