--- a/RockWeb/Styles/styles-v2-prototype/core.css
+++ b/RockWeb/Styles/styles-v2-prototype/core.css
@@ -15660,10 +15660,11 @@ textarea:focus,
   opacity: 0;
 }
 
-.obsidian-block .grid-overflow {
+.grid-overflow {
   overflow-x: auto;
 }
-.obsidian-block .grid-obsidian {
+
+.grid-obsidian {
   --table-cell-padding-x: 16px;
   --table-cell-padding-y: 16px;
   color: var(--color-interface-strongest);
@@ -15671,114 +15672,138 @@ textarea:focus,
   /* Allow some of the popups to be positioned relative to the grid */
   position: relative;
 }
-.obsidian-block .grid-obsidian.grid-bordered {
+
+.grid-obsidian.grid-bordered {
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.03), 0 1px 3px 0 rgba(0, 0, 0, 0.08);
 }
-.obsidian-block .grid-obsidian.grid-bordered {
+
+.grid-obsidian.grid-bordered {
   border: 1px solid var(--color-interface-soft);
   border-radius: 4px;
 }
-.obsidian-block .grid-heading {
+
+.grid-heading {
   background: var(--color-interface-softest);
   border-radius: 4px 4px 0 0;
   z-index: 1;
 }
-.obsidian-block .grid-obsidian.grid-sticky > .grid-heading {
+
+.grid-obsidian.grid-sticky > .grid-heading {
   position: sticky;
   top: var(--sticky-element-offset);
 }
-.obsidian-block .grid-obsidian.grid-sticky .sticky-column-header {
+
+.grid-obsidian.grid-sticky .sticky-column-header {
   position: sticky;
   top: calc(var(--sticky-element-offset) + 56px);
   z-index: 1;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading {
+
+.grid-obsidian > .grid-heading > .grid-title-heading {
   display: flex;
   flex-wrap: wrap;
   border-bottom: 1px solid var(--color-interface-soft);
   align-items: center;
   font-size: 18px;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-title {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-title {
   flex-grow: 1;
   font-size: var(--font-size-h5);
   font-weight: 500;
   line-height: 1;
   padding-left: 24px;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-badges {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-badges {
   height: 56px;
   display: flex;
   align-items: center;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions {
   background-color: initial;
   text-align: initial;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action {
   width: 56px;
   height: 56px;
   margin: 0;
   border-radius: 0;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action.active {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action.active {
   background-color: var(--color-interface-soft);
   color: var(--color-interface-medium);
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action.btn-add {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action.btn-add {
   color: var(--color-info-strong);
   font-size: 115%;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action.btn-add:hover {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action.btn-add:hover {
   color: var(--color-info-strong);
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action:hover {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-actions .btn-grid-action:hover {
   background-color: var(--color-interface-soft);
 }
-.obsidian-block .grid-actions-dropdown-menu {
+
+.grid-actions-dropdown-menu {
   position: fixed;
   display: block;
   margin-top: 0;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter {
   display: flex;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter > .grid-quick-filter-search {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter > .grid-quick-filter-search {
   width: 0;
   overflow: hidden;
   transition: width 0.3s ease;
   display: inline-flex;
   align-items: stretch;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter.active > .grid-quick-filter-search {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter.active > .grid-quick-filter-search {
   width: 240px;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter.active > .btn-grid-action {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter.active > .btn-grid-action {
   background-color: var(--color-interface-soft);
   color: var(--color-interface-medium);
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter > .grid-quick-filter-search > .control-wrapper {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter > .grid-quick-filter-search > .control-wrapper {
   width: 100%;
   height: 100%;
 }
-.obsidian-block .grid-quick-filter-search > .control-wrapper > div {
+
+.grid-quick-filter-search > .control-wrapper > div {
   width: 100%;
   height: 100%;
   padding: 0;
   display: flex;
   align-items: center;
 }
-.obsidian-block .grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter > .grid-quick-filter-search > .control-wrapper .form-control {
+
+.grid-obsidian > .grid-heading > .grid-title-heading > .grid-quick-filter > .grid-quick-filter-search > .control-wrapper .form-control {
   height: 100%;
   width: 100%;
   border-radius: 0;
 }
-.obsidian-block .grid-column-heading {
+
+.grid-column-heading {
   display: flex;
   font-weight: 500;
   color: var(--color-interface-strong);
 }
-.obsidian-block .grid-column-header {
+
+.grid-column-header {
   position: relative;
   display: flex;
   align-items: center;
@@ -15788,39 +15813,48 @@ textarea:focus,
   min-width: 120px;
   border-bottom: 1px solid var(--color-interface-soft);
 }
-.obsidian-block .grid-bordered .grid-column-header {
+
+.grid-bordered .grid-column-header {
   background-color: var(--color-interface-softer);
 }
-.obsidian-block .grid-column-header.sortable {
+
+.grid-column-header.sortable {
   cursor: pointer;
 }
-.obsidian-block .grid-column-header.sortable:hover {
+
+.grid-column-header.sortable:hover {
   background-color: var(--color-interface-soft);
 }
-.obsidian-block .grid-column-title {
+
+.grid-column-title {
   flex: 1 1 auto;
   overflow: hidden;
 }
-.obsidian-block .grid-sort-direction {
+
+.grid-sort-direction {
   display: flex;
   align-items: center;
   transition: transform 0.11s cubic-bezier(0.2, 0, 0.38, 0.9);
   accent-color: var(--color-info-strong);
 }
-.obsidian-block .grid-sort-direction svg {
+
+.grid-sort-direction svg {
   width: 14px;
   height: 21px;
 }
-.obsidian-block .grid-sort-direction.sort-desc {
+
+.grid-sort-direction.sort-desc {
   /* transform flip */
   transform: rotate(180deg);
   /* transform orgin centerr */
   transform-origin: center;
 }
-.obsidian-block .grid-column-header.grid-select-field .checkbox label {
+
+.grid-column-header.grid-select-field .checkbox label {
   margin: 0;
 }
-.obsidian-block .grid-column-header > .btn-grid-column-filter {
+
+.grid-column-header > .btn-grid-column-filter {
   border: 0;
   text-align: center;
   background-color: transparent;
@@ -15832,27 +15866,33 @@ textarea:focus,
   opacity: 0;
   transition: opacity 250ms, color 250ms;
 }
-.obsidian-block .grid-column-heading:hover .btn-grid-column-filter {
+
+.grid-column-heading:hover .btn-grid-column-filter {
   opacity: 0.5;
 }
-.obsidian-block .grid-column-header > .btn-grid-column-filter:hover {
+
+.grid-column-header > .btn-grid-column-filter:hover {
   opacity: 1;
   background-color: var(--color-interface-softest);
 }
-.obsidian-block .grid-column-header > .btn-grid-column-filter svg {
+
+.grid-column-header > .btn-grid-column-filter svg {
   width: 14px;
   height: 14px;
 }
-.obsidian-block .grid-column-header > .btn-grid-column-filter.active {
+
+.grid-column-header > .btn-grid-column-filter.active {
   opacity: 1;
   color: var(--color-info-strong);
 }
-.obsidian-block .grid-filter-popup-container {
+
+.grid-filter-popup-container {
   position: fixed;
   /* 1050 matches the bootstrap dropdown menu used in other parts of the grid. */
   z-index: 1050;
 }
-.obsidian-block .grid-filter-popup-container .grid-filter-popup {
+
+.grid-filter-popup-container .grid-filter-popup {
   display: flex;
   flex-direction: column;
   margin-top: 1px;
@@ -15870,42 +15910,51 @@ textarea:focus,
   cursor: initial;
   font-weight: initial;
 }
-.obsidian-block .grid-filter-popup-container .grid-filter-popup > .grid-filter-popup-content {
+
+.grid-filter-popup-container .grid-filter-popup > .grid-filter-popup-content {
   flex-grow: 1;
   overflow-y: auto;
 }
-.obsidian-block .grid-filter-popup-container .grid-filter-popup > .grid-filter-popup-content > .grid-filter-popup-body {
+
+.grid-filter-popup-container .grid-filter-popup > .grid-filter-popup-content > .grid-filter-popup-body {
   margin: 10px;
   padding: 2px;
   overflow-x: clip;
 }
-.obsidian-block .grid-filter-popup-container .grid-filter-popup > .actions {
+
+.grid-filter-popup-container .grid-filter-popup > .actions {
   display: flex;
   border-top: 1px solid var(--color-interface-soft);
   background-color: #fcfcfc;
   padding: 8px;
   gap: 8px;
 }
-.obsidian-block .grid-filter-popup-container .grid-filter-popup .alert {
+
+.grid-filter-popup-container .grid-filter-popup .alert {
   border-top: 0;
   box-shadow: none;
   padding: 8px;
 }
-.obsidian-block .grid-row {
+
+.grid-row {
   display: flex;
   background-color: var(--color-interface-softest);
   transition: background-color 70ms cubic-bezier(0, 0, 0.38, 0.9);
 }
-.obsidian-block .grid-row.grid-row-selectable {
+
+.grid-row.grid-row-selectable {
   cursor: pointer;
 }
-.obsidian-block .grid-striped .grid-row.grid-row-even {
+
+.grid-striped .grid-row.grid-row-even {
   background-color: var(--color-interface-softer);
 }
-.obsidian-block .grid-hover .grid-row:hover {
+
+.grid-hover .grid-row:hover {
   background-color: #eef4fc;
 }
-.obsidian-block .grid-cell {
+
+.grid-cell {
   display: flex;
   align-items: center;
   padding: var(--table-cell-padding-y) var(--table-cell-padding-x);
@@ -15918,48 +15967,59 @@ textarea:focus,
   min-width: 120px;
   border-bottom: 1px solid var(--color-interface-soft);
 }
-.obsidian-block .grid-cell.grid-columnreorder {
+
+.grid-cell.grid-columnreorder {
   min-width: fit-content;
 }
-.obsidian-block .grid-cell.grid-wrapcell {
+
+.grid-cell.grid-wrapcell {
   flex-wrap: wrap;
 }
-.obsidian-block .grid-select-field {
+
+.grid-select-field {
   min-width: 60px;
 }
-.obsidian-block .grid-select-field:first-child {
+
+.grid-select-field:first-child {
   align-items: center;
   padding-right: calc(var(--table-cell-padding-x) / 2);
   flex: 0 0 calc(var(--table-cell-padding-x) + 20px) !important;
 }
-.obsidian-block .grid-columncommand {
+
+.grid-columncommand {
   --table-cell-padding-y: 0;
   display: flex;
   align-items: center;
   padding: 0;
   min-width: fit-content;
 }
-.obsidian-block .grid-columncommand .btn {
+
+.grid-columncommand .btn {
   opacity: 0.4;
 }
-.obsidian-block .grid-columncommand .btn:hover {
+
+.grid-columncommand .btn:hover {
   opacity: 1;
 }
-.obsidian-block .grid-columnreorder {
+
+.grid-columnreorder {
   align-items: center;
 }
-.obsidian-block .grid-footing {
+
+.grid-footing {
   color: var(--color-interface-strongest);
   background-color: var(--color-interface-softest);
   border-radius: 0 0 4px 4px;
   overflow: hidden;
 }
-.obsidian-block .grid-paging-footer {
+
+.grid-paging-footer {
   display: flex;
   padding: 8px var(--table-cell-padding-x);
   align-items: center;
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-sizes {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-sizes {
   flex: 1 1 auto;
   display: flex;
   justify-content: start;
@@ -15968,20 +16028,24 @@ textarea:focus,
   line-height: 16px;
   gap: 8px;
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-sizes .form-control {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-sizes .form-control {
   flex: 0 0 80px;
 }
-.obsidian-block .grid-page-size-picker .btn {
+
+.grid-page-size-picker .btn {
   font-weight: 400;
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker {
   display: inline-flex;
   justify-content: center;
   align-items: stretch;
   line-height: 1;
   color: var(--color-interface-stronger);
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button {
   display: inline-flex;
   justify-content: center;
   border: 1px solid var(--color-interface-soft);
@@ -15991,43 +16055,59 @@ textarea:focus,
   line-height: 16px;
   min-width: 2.75em;
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button:hover {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button:hover {
   background-color: var(--color-interface-softer);
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button ~ button {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button ~ button {
   margin-left: -1px;
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker .prev {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker .prev {
   border-radius: 4px 0 0 4px;
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker .next {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker .next {
   border-radius: 0 4px 4px 0;
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button.disabled {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button.disabled {
   color: var(--color-interface-medium);
   pointer-events: none;
 }
-.obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button.active {
+
+.grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > button.active {
   background-color: var(--color-interface-soft);
 }
-.obsidian-block .grid-obsidian .grid-cell .highlight-detail {
+
+.grid-obsidian .grid-cell .highlight-detail {
   color: var(--color-interface-medium);
   font-size: 14px;
 }
-.obsidian-block .grid-obsidian .grid-cell .highlight-title {
+
+.grid-obsidian .grid-cell .highlight-title {
   font-weight: 600;
 }
+
+.grid-obsidian .grid-cell-number,
+.grid-obsidian .grid-cell-currency,
+.grid-obsidian .grid-column-header-number,
+.grid-obsidian .grid-column-header-currency {
+  text-align: right;
+  justify-content: right;
+}
+
 @media (max-width: 767px) {
-  .obsidian-block .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > .page-num {
+  .grid-obsidian > .grid-footing > .grid-paging-footer > .grid-page-picker > .page-num {
     display: none;
   }
 }
 @media (max-width: 992px) {
-  .obsidian-block .grid-obsidian.grid-sticky .sticky-column-header {
+  .grid-obsidian.grid-sticky .sticky-column-header {
     top: calc(var(--sticky-element-offset) + 114px);
   }
 }
-
 .html-editor-container.loading {
   box-sizing: content-box;
   padding: 0 0 calc(var(--spacing-xlarge) + 10);
