- Polish the styles v2 full work surface layout.

--- a/RockWeb/Styles/styles-v2-prototype/blocks/_blocks-communication.scss
+++ b/RockWeb/Styles/styles-v2-prototype/blocks/_blocks-communication.scss
@@ -33,6 +33,10 @@
     }
   }
 }
+
+.featured-content.row {
+  margin:0 !important;
+}
 // ====================== END Contributions ======================
 
 
