--- a/RockWeb/Styles/styles-v2-prototype/core.css
+++ b/RockWeb/Styles/styles-v2-prototype/core.css
@@ -2584,28 +2584,28 @@ th {
 }
 
 .btn.btn-primary {
-  color: var(--color-interface-softest);
+  color: var(--base-interface-softest);
   background-color: var(--color-primary);
   border-color: var(--color-primary);
 }
 .btn.btn-primary:focus, .btn.btn-primary.focus {
-  color: var(--color-interface-softest);
+  color: var(--base-interface-softest);
   background-color: var(--color-primary);
   border-color: var(--color-primary);
 }
 .btn.btn-primary:hover {
-  color: var(--color-interface-softest);
+  color: var(--base-interface-softest);
   background-color: var(--color-primary-shade);
   border-color: var(--color-primary-shade);
 }
 .btn.btn-primary:active, .btn.btn-primary.active, .open > .dropdown-toggle .btn.btn-primary {
-  color: var(--color-interface-softest);
+  color: var(--base-interface-softest);
   background-color: var(--color-primary);
   border-color: var(--color-interface-softest);
   background-image: none;
 }
 .btn.btn-primary:active:hover, .btn.btn-primary:active:focus, .btn.btn-primary:active.focus, .btn.btn-primary.active:hover, .btn.btn-primary.active:focus, .btn.btn-primary.active.focus, .open > .dropdown-toggle .btn.btn-primary:hover, .open > .dropdown-toggle .btn.btn-primary:focus, .open > .dropdown-toggle .btn.btn-primary.focus {
-  color: var(--color-interface-softest);
+  color: var(--base-interface-softest);
   background-color: var(--color-primary-shade);
   border-color: var(--color-primary-shade);
 }
@@ -15994,7 +15994,7 @@ textarea:focus,
   min-width: fit-content;
 }
 
-.grid-columncommand .btn {
+.grid-obsidian .grid-columncommand .btn {
   opacity: 0.4;
 }
 
@@ -19627,6 +19627,10 @@ span.data-view-filter-label {
 }
 .recipients .recipient.opened {
   color: var(--color-success-strong);
+}
+
+.featured-content.row {
+  margin: 0 !important;
 }
 
 iframe.email-body {
