- Update the styles v2 soft color by decreasing the mixture percentage of the base color.

--- a/RockWeb/Styles/styles-v2-prototype/components/_alerts.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_alerts.scss
@@ -16,6 +16,10 @@
   margin-bottom:  var(--spacing-large);
   border:         1px solid transparent;
   border-radius:  var(--rounded-small); 
+  
+  p {
+    color: inherit;
+  }
 
   h4 {
     margin: 0;
