- Update the ace-editor and the grid obsidian hover in styles v2.

--- a/RockWeb/Styles/styles-v2-prototype/rock-components/_grid-obisidian.scss
+++ b/RockWeb/Styles/styles-v2-prototype/rock-components/_grid-obisidian.scss
@@ -289,7 +289,7 @@
 }
 
 .grid-hover .grid-row:hover {
-    background-color: #eef4fc;
+    background-color: var(--color-interface-soft);
 }
 
 .grid-cell {
