--- a/RockWeb/Styles/styles-v2-prototype/core.css
+++ b/RockWeb/Styles/styles-v2-prototype/core.css
@@ -10232,6 +10232,18 @@ ul ul, ol ul, ul ol, ol ol {
   background-color: var(--color-interface-softer) !important;
 }
 
+.ace_scroller {
+  background-color: var(--color-interface-softest) !important;
+}
+
+.ace_line {
+  color: var(--color-interface-strong);
+}
+
+.ace_editor .ace_marker-layer .ace_selection {
+  background: rgba(0, 120, 215, 0.4);
+}
+
 .ace-tm .ace_gutter, .ace-github .ace_gutter {
   background: var(--color-interface-softer) !important;
 }
@@ -15954,7 +15966,7 @@ textarea:focus,
 }
 
 .grid-hover .grid-row:hover {
-  background-color: #eef4fc;
+  background-color: var(--color-interface-soft);
 }
 
 .grid-cell {
