--- a/RockWeb/Styles/styles-v2-prototype/rock-components/_ace-editor.scss
+++ b/RockWeb/Styles/styles-v2-prototype/rock-components/_ace-editor.scss
@@ -20,6 +20,16 @@
         background-color: var(--color-interface-softer) !important;
     }
 }
+.ace_scroller {
+    background-color: var(--color-interface-softest) !important;
+}
+.ace_line {
+    color: var(--color-interface-strong);
+}
+
+.ace_editor .ace_marker-layer .ace_selection {
+    background: rgba(0, 120, 215, 0.4)
+}
 
 .ace-tm, .ace-github {
     .ace_gutter {
