--- a/RockWeb/Styles/styles-v2-prototype/components/_buttons.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_buttons.scss
@@ -953,7 +953,7 @@ input[type="button"] {
   align-items: center;
   justify-content: center;
 
-  margin-left: var(--spacing-xsmall);
+  margin-left: var(--spacing-small);
   padding: var(--spacing-xsmall) var(--spacing-xsmall);
   font-size: 1.15em ;
   border: 1px solid var(--color-interface-soft);
