--- a/RockWeb/Styles/styles-v2-prototype/rock-components/_security-controls.scss
+++ b/RockWeb/Styles/styles-v2-prototype/rock-components/_security-controls.scss
@@ -46,8 +46,8 @@
     align-items:      center;
     gap:              var(--spacing-xsmall);
     padding:          var(--spacing-tiny) var(--spacing-tiny);
-    padding-left:     var(--spacing-small);
-    margin-left:      var(--spacing-xsmall);
+    padding-left:     var(--spacing-medium);
+    margin-left:      var(--spacing-small);
 
     @media (max-width: $screen-small) {
       padding: var(--spacing-tiny) var(--spacing-tiny);
